--- a/principal.html
+++ b/principal.html
@@ -21,7 +21,7 @@
                 <a href="#" class="list-group-item list-group-item-action active">Home</a>
                 <a href="#" class="list-group-item list-group-item-action">Ver mascotas</a>
                 <a href="#" class="list-group-item list-group-item-action">Hacer donación</a>
-                <a href="#" class="list-group-item list-group-item-action ">Cerrar sesión</a>
+                <a id="btnLogout" href="#" class="list-group-item list-group-item-action ">Cerrar sesión</a>
             </div>
         </div>
     </div>
